--- a/test_compiled_library.ipynb
+++ b/test_compiled_library.ipynb
@@ -5,337 +5,64 @@
    "execution_count": 1,
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('./citePyExample/cmake-build-debug')\n"
+    "import citePyExample.citePyExample as m"
    ],
    "metadata": {
     "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    },
     "ExecuteTime": {
-     "end_time": "2023-12-19T13:15:22.348176500Z",
-     "start_time": "2023-12-19T13:15:22.341530200Z"
+     "end_time": "2024-01-05T13:59:21.355281900Z",
+     "start_time": "2024-01-05T13:59:21.345148100Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on module citePyExample:\n",
-      "\n",
-      "NAME\n",
-      "    citePyExample\n",
-      "\n",
-      "CLASSES\n",
-      "    pybind11_builtins.pybind11_object(builtins.object)\n",
-      "        ExampleEnum\n",
-      "        ExampleStruct\n",
-      "        IExample\n",
-      "\n",
-      "    class ExampleEnum(pybind11_builtins.pybind11_object)\n",
-      "     |  Method resolution order:\n",
-      "     |      ExampleEnum\n",
-      "     |      pybind11_builtins.pybind11_object\n",
-      "     |      builtins.object\n",
-      "     |\n",
-      "     |  Methods defined here:\n",
-      "     |\n",
-      "     |  __eq__(...)\n",
-      "     |      __eq__(self: object, other: object) -> bool\n",
-      "     |\n",
-      "     |  __getstate__(...)\n",
-      "     |      __getstate__(self: object) -> int\n",
-      "     |\n",
-      "     |  __hash__(...)\n",
-      "     |      __hash__(self: object) -> int\n",
-      "     |\n",
-      "     |  __index__(...)\n",
-      "     |      __index__(self: citePyExample.ExampleEnum) -> int\n",
-      "     |\n",
-      "     |  __init__(...)\n",
-      "     |      __init__(self: citePyExample.ExampleEnum, value: int) -> None\n",
-      "     |\n",
-      "     |  __int__(...)\n",
-      "     |      __int__(self: citePyExample.ExampleEnum) -> int\n",
-      "     |\n",
-      "     |  __ne__(...)\n",
-      "     |      __ne__(self: object, other: object) -> bool\n",
-      "     |\n",
-      "     |  __repr__(...)\n",
-      "     |      __repr__(self: object) -> str\n",
-      "     |\n",
-      "     |  __setstate__(...)\n",
-      "     |      __setstate__(self: citePyExample.ExampleEnum, state: int) -> None\n",
-      "     |\n",
-      "     |  __str__(...)\n",
-      "     |      __str__(self: object) -> str\n",
-      "     |\n",
-      "     |  ----------------------------------------------------------------------\n",
-      "     |  Readonly properties defined here:\n",
-      "     |\n",
-      "     |  __members__\n",
-      "     |\n",
-      "     |  name\n",
-      "     |      name(self: object) -> str\n",
-      "     |\n",
-      "     |  value\n",
-      "     |\n",
-      "     |  ----------------------------------------------------------------------\n",
-      "     |  Data and other attributes defined here:\n",
-      "     |\n",
-      "     |  add = <ExampleEnum.add: 0>\n",
-      "     |\n",
-      "     |  subtract = <ExampleEnum.subtract: 1>\n",
-      "     |\n",
-      "     |  ----------------------------------------------------------------------\n",
-      "     |  Static methods inherited from pybind11_builtins.pybind11_object:\n",
-      "     |\n",
-      "     |  __new__(*args, **kwargs) from pybind11_builtins.pybind11_type\n",
-      "     |      Create and return a new object.  See help(type) for accurate signature.\n",
-      "\n",
-      "    class ExampleStruct(pybind11_builtins.pybind11_object)\n",
-      "     |  /*!\n",
-      "     |  * \\struct  ExampleStruct\n",
-      "     |  *\n",
-      "     |  * \\brief   An example structure.\n",
-      "     |  */\n",
-      "     |\n",
-      "     |  Method resolution order:\n",
-      "     |      ExampleStruct\n",
-      "     |      pybind11_builtins.pybind11_object\n",
-      "     |      builtins.object\n",
-      "     |\n",
-      "     |  Methods defined here:\n",
-      "     |\n",
-      "     |  __init__(...)\n",
-      "     |      __init__(*args, **kwargs)\n",
-      "     |      Overloaded function.\n",
-      "     |\n",
-      "     |      1. __init__(self: citePyExample.ExampleStruct) -> None\n",
-      "     |\n",
-      "     |      /*!\n",
-      "     |      * \\fn  ExampleStruct();\n",
-      "     |      *\n",
-      "     |      * \\brief   Default constructor\n",
-      "     |      */\n",
-      "     |\n",
-      "     |      2. __init__(self: citePyExample.ExampleStruct, arg0: float, arg1: float) -> None\n",
-      "     |\n",
-      "     |      /*!\n",
-      "     |      * \\fn  ExampleStruct(double left, double right);\n",
-      "     |      *\n",
-      "     |      * \\brief   Constructor\n",
-      "     |      *\n",
-      "     |      * \\param   left    The left.\n",
-      "     |      * \\param   right   The right.\n",
-      "     |      */\n",
-      "     |\n",
-      "     |  getLeft(...)\n",
-      "     |      getLeft(self: citePyExample.ExampleStruct) -> float\n",
-      "     |\n",
-      "     |  ----------------------------------------------------------------------\n",
-      "     |  Data descriptors defined here:\n",
-      "     |\n",
-      "     |  left\n",
-      "     |      ///< The left\n",
-      "     |\n",
-      "     |  right\n",
-      "     |      ///< The right\n",
-      "     |\n",
-      "     |  ----------------------------------------------------------------------\n",
-      "     |  Static methods inherited from pybind11_builtins.pybind11_object:\n",
-      "     |\n",
-      "     |  __new__(*args, **kwargs) from pybind11_builtins.pybind11_type\n",
-      "     |      Create and return a new object.  See help(type) for accurate signature.\n",
-      "\n",
-      "    class IExample(pybind11_builtins.pybind11_object)\n",
-      "     |  /*!\n",
-      "     |  * \\class   IExample\n",
-      "     |  *\n",
-      "     |  * \\brief   An example class to show the usage ot citePy\n",
-      "     |  */\n",
-      "     |\n",
-      "     |  Method resolution order:\n",
-      "     |      IExample\n",
-      "     |      pybind11_builtins.pybind11_object\n",
-      "     |      builtins.object\n",
-      "     |\n",
-      "     |  Methods defined here:\n",
-      "     |\n",
-      "     |  __init__(self, /, *args, **kwargs)\n",
-      "     |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      "     |\n",
-      "     |  add(...)\n",
-      "     |      add(self: citePyExample.IExample, arg0: float, arg1: float) -> float\n",
-      "     |\n",
-      "     |      /*!\n",
-      "     |      * \\fn  virtual double IExample::add(double left, double right) = 0;\n",
-      "     |      *\n",
-      "     |      * \\brief   Adds two doubles\n",
-      "     |      *\n",
-      "     |      * \\param   left    The left.\n",
-      "     |      * \\param   right   The right.\n",
-      "     |      *\n",
-      "     |      * \\returns the result.\n",
-      "     |      */\n",
-      "     |\n",
-      "     |  addReferenced(...)\n",
-      "     |      addReferenced(self: citePyExample.IExample, arg0: float, arg1: float, arg2: float) -> tuple[float]\n",
-      "     |\n",
-      "     |      /*!\n",
-      "     |      * \\fn  virtual void IExample::addReferenced(double& result, double left, double right) = 0;\n",
-      "     |      *\n",
-      "     |      * \\brief   Adds a referenced\n",
-      "     |      *\n",
-      "     |      * \\param [in,out]  result  The result.\n",
-      "     |      * \\param           left    The left.\n",
-      "     |      * \\param           right   The right.\n",
-      "     |      */\n",
-      "     |\n",
-      "     |  compute(...)\n",
-      "     |      compute(*args, **kwargs)\n",
-      "     |      Overloaded function.\n",
-      "     |\n",
-      "     |      1. compute(self: citePyExample.IExample, arg0: citePyExample.ExampleEnum, arg1: citePyExample.ExampleStruct) -> float\n",
-      "     |\n",
-      "     |      /*!\n",
-      "     |      * \\fn  virtual double IExample::compute(ExampleEnum option, ExampleStruct values) = 0;\n",
-      "     |      *\n",
-      "     |      * \\brief   Computes\n",
-      "     |      *\n",
-      "     |      * \\param   option  The option.\n",
-      "     |      * \\param   values  The values.\n",
-      "     |      *\n",
-      "     |      * \\returns the result.\n",
-      "     |      */\n",
-      "     |\n",
-      "     |      2. compute(self: citePyExample.IExample, arg0: list[float]) -> float\n",
-      "     |\n",
-      "     |      /*!\n",
-      "     |      * \\fn  virtual double IExample::compute(SecondNamespace::ExternalStruct values) = 0;\n",
-      "     |      *\n",
-      "     |      * \\brief   Ass all the given values, inside the vector\n",
-      "     |      *\n",
-      "     |      * \\param   values  The values.\n",
-      "     |      *\n",
-      "     |      * \\returns A double.\n",
-      "     |      */\n",
-      "     |\n",
-      "     |      3. compute(self: citePyExample.IExample, arg0: SecondNamespace::ExternalStruct) -> float\n",
-      "     |\n",
-      "     |      /*!\n",
-      "     |      * \\fn  virtual double IExample::compute(SecondNamespace::ExternalStruct values) = 0;\n",
-      "     |      *\n",
-      "     |      * \\brief   Computes the given values\n",
-      "     |      *\n",
-      "     |      * \\param   values  The values.\n",
-      "     |      *\n",
-      "     |      * \\returns A double.\n",
-      "     |      */\n",
-      "     |\n",
-      "     |  registerCallback(...)\n",
-      "     |      registerCallback(self: citePyExample.IExample, arg0: Callable[[float], None]) -> None\n",
-      "     |\n",
-      "     |      /*!\n",
-      "     |      * \\fn  virtual void IExample::registerCallback(ExampleCallbackDefinition cb) = 0;\n",
-      "     |      *\n",
-      "     |      * \\brief   Registers the callback described by cb\n",
-      "     |      *\n",
-      "     |      * \\param   cb  The cb.\n",
-      "     |      */\n",
-      "     |\n",
-      "     |  subtract(...)\n",
-      "     |      subtract(self: citePyExample.IExample, arg0: float, arg1: float) -> float\n",
-      "     |\n",
-      "     |      /*!\n",
-      "     |      * \\fn  virtual double IExample::subtract(double left, double right) = 0;\n",
-      "     |      *\n",
-      "     |      * \\brief   Subtracts two doubles\n",
-      "     |      *\n",
-      "     |      * \\param   left    The left.\n",
-      "     |      * \\param   right   The right.\n",
-      "     |      *\n",
-      "     |      * \\returns the result.\n",
-      "     |      */\n",
-      "     |\n",
-      "     |  ----------------------------------------------------------------------\n",
-      "     |  Static methods defined here:\n",
-      "     |\n",
-      "     |  createLibrary(...) from builtins.PyCapsule\n",
-      "     |      createLibrary() -> citePyExample.IExample\n",
-      "     |\n",
-      "     |      /*!\n",
-      "     |      * \\fn  static std::unique_ptr<IExample> IExample::createLibrary();\n",
-      "     |      *\n",
-      "     |      * \\brief   Instantiates a library object without knowledge about the implementation\n",
-      "     |      *\n",
-      "     |      * \\returns The new library.\n",
-      "     |      */\n",
-      "     |\n",
-      "     |  ----------------------------------------------------------------------\n",
-      "     |  Static methods inherited from pybind11_builtins.pybind11_object:\n",
-      "     |\n",
-      "     |  __new__(*args, **kwargs) from pybind11_builtins.pybind11_type\n",
-      "     |      Create and return a new object.  See help(type) for accurate signature.\n",
-      "\n",
-      "DATA\n",
-      "    add = <ExampleEnum.add: 0>\n",
-      "    subtract = <ExampleEnum.subtract: 1>\n",
-      "\n",
-      "FILE\n",
-      "    c:\\_prj\\citepy11\\citepyexample\\cmake-build-debug\\citepyexample.cp312-win_amd64.pyd\n"
+     "ename": "NameError",
+     "evalue": "name 'citePyExample' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[2], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m test_lib \u001B[38;5;241m=\u001B[39m \u001B[43mcitePyExample\u001B[49m\u001B[38;5;241m.\u001B[39mIExample\u001B[38;5;241m.\u001B[39mcreateLibrary()\n\u001B[0;32m      2\u001B[0m test_lib\u001B[38;5;241m.\u001B[39madd(\u001B[38;5;241m5\u001B[39m, \u001B[38;5;241m77\u001B[39m)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'citePyExample' is not defined"
      ]
     }
    ],
-   "source": [
-    "import citePyExample\n",
-    "help(citePyExample)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-19T13:15:43.330925400Z",
-     "start_time": "2023-12-19T13:15:43.322045900Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
     "test_lib = citePyExample.IExample.createLibrary()\n",
     "test_lib.add(5, 77)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-05T13:46:31.794220700Z",
+     "start_time": "2024-01-05T13:46:31.640054400Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "outputs": [
     {
-     "data": {
-      "text/plain": "50.0"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "property 'exampleDouble' of 'SecondNamespace.ExternalStruct' object has no setter",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[2], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m example_struct \u001B[38;5;241m=\u001B[39m m\u001B[38;5;241m.\u001B[39mSecondNamespace\u001B[38;5;241m.\u001B[39mExternalStruct()\n\u001B[1;32m----> 2\u001B[0m \u001B[43mexample_struct\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mexampleDouble\u001B[49m \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m5.0\u001B[39m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28mprint\u001B[39m(example_struct\u001B[38;5;241m.\u001B[39mexampleDouble)\n",
+      "\u001B[1;31mAttributeError\u001B[0m: property 'exampleDouble' of 'SecondNamespace.ExternalStruct' object has no setter"
+     ]
     }
    ],
    "source": [
-    "example_struct = citePyExample.ExampleStruct()\n",
-    "example_struct.left = 3\n",
-    "example_struct.right = 47\n",
-    "\n",
-    "test_lib.compute(citePyExample.ExampleEnum.add, example_struct)"
+    "example_struct = m.SecondNamespace.ExternalStruct()\n",
+    "example_struct.exampleDouble = 5.0\n",
+    "print(example_struct.exampleDouble)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -343,8 +70,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-19T13:16:41.800916700Z",
-     "start_time": "2023-12-19T13:16:41.796548700Z"
+     "end_time": "2024-01-05T13:59:23.074124900Z",
+     "start_time": "2024-01-05T13:59:22.915684300Z"
     }
    }
   },
